--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Alex Dufford's Personal Website
+title: Alexander J. Dufford, PhD
 email: alexander.dufford@yale.edu
 description: > # this means to ignore newlines until "baseurl:"
   Researcher at the Intersection of Developmental Psychology, Machine Learning, and Neuroimaging
